fixed bug where image was pushing title offscreen. Body was set to height:100vh.

--- a/website/static/css/snitch_style.css
+++ b/website/static/css/snitch_style.css
@@ -7,7 +7,6 @@ body {
   justify-content: center;
   font-size: 3vh;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  height: 100vh;
   width: 100vw; }
   body form {
     height: 100vh;
