--- a/website/static/sass/_mixins.scss
+++ b/website/static/sass/_mixins.scss
@@ -36,6 +36,5 @@
   justify-content: center;
   font-size: 3vh;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  height: 100vh;
   width: 100vw;
 }
